--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,10 @@
 	<noscript>You need to enable JavaScript to run this app.</noscript>
 	<div id="root"></div>
 	<div id="modal"></div>
+	<div id="updateApplication">
+		Hay una nueva versión de esta aplicación
+		<button id="reload">Recargar</button>
+	</div>
 	<!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
